небольшие правки